# message_proj

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
message/: admin.py  forms.py  models.py  urls.py  views.py
message/management/commands/: run_mailing.py
message/migrations/: 0001_initial.py  0002_alter_attempt_response.py  0003_alter_mailing_status.py  0004_alter_attempt_last_try.py
message/templates/message/: attempt_list.html  base.html  client_confirm_delete.html  client_form.html  mailing_form.html  mailing_list.html  message_form.html
message/templates/message/includes/: inc_footer.html
static/css/: bootstrap-grid.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: login.html  register.html  user_form.html  verify.html
